# flatcc

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.txt  NOTICE  README.md  TODO.md  appveyor.yml  backtrace.txt  cmake-lin.sh  meson.build  meson_options.txt
.github/: dependabot.yml
.github/workflows/: ci-more.yml  ci.yml  weekly.yml
cmake/: FindFlatCCNative.cmake  FindWdk.cmake  FlatccGenerateSources.cmake  flatcc-config.cmake.in
config/: config.h
doc/: Grammar.README.md  benchmarks.md  binary-format.md  builder.md  eclectic.fbs  flatcc-help.md  json_parser_design.md  security.md
examples/reflection/: bfbs2json.c  build.sh
include/: README.md
include/flatcc/: flatcc.h  flatcc_accessors.h  flatcc_alloc.h  flatcc_assert.h  flatcc_builder.h  flatcc_emitter.h  flatcc_endian.h  flatcc_flatbuffers.h  flatcc_identifier.h  flatcc_iov.h  flatcc_json_parser.h  flatcc_json_printer.h  flatcc_portable.h  flatcc_refmap.h  flatcc_rtconfig.h  flatcc_types.h  flatcc_unaligned.h  flatcc_verifier.h  flatcc_version.h
include/flatcc/portable/: LICENSE  README.md  grisu3_math.h  grisu3_parse.h  grisu3_print.h  paligned_alloc.h  palloc.h  pattributes.h  pbase64.h  pcrt.h  pdiagnostic.h  pdiagnostic_pop.h  pdiagnostic_push.h  pendian.h  pendian_detect.h  pinline.h  pinttypes.h  piovec.h  pmemaccess.h  portable.h  portable_basic.h  pparsefp.h  pparseint.h  pprintfp.h  pprintint.h  prestrict.h  pstatic_assert.h  pstatic_assert_scope.h  pstdalign.h  pstdbool.h  pstdint.h  punaligned.h  pversion.h  pwarnings.h
include/flatcc/portable/pgrisu3/: README.md  grisu3_parse.h  grisu3_print.h
include/flatcc/reflection/: README.md  flatbuffers_common.h  flatbuffers_common_builder.h  flatbuffers_common_reader.h  reflection.h  reflection_builder.h  reflection_reader.h  reflection_verifier.h
include/flatcc/support/: cdump.h  elapsed.h  hexdump.h  readfile.h
include/portable/: README.md  pendian.h  pendian_detect.h  pinline.h  pinttypes.h  portable.h  pparsefp.h  pprintfp.h  pstdbool.h  punaligned.h  static_assert.h
include/portable/pgrisu3/: grisu3_math.h
include/support/: elapsed.h  hexdump.h  readfile.h
reflection/: generate_code.sh  reflection.fbs
rules/: meson.build
samples/: CMakeLists.txt  meson.build
samples/bugreport/: build.sh  eclectic.fbs  myissue.c  myissue_generated.h
samples/monster/: CMakeLists.txt  build.sh  meson.build  monster.c  monster.fbs
samples/monster_build_rules/: meson.build
samples/reflection/: CMakeLists.txt  bfbs2json.c  build.sh  meson.build
scripts/: _user_build.in  benchflatcc.sh  benchmark.sh  bfbs-sample.sh  build.cfg.cmake  build.cfg.make  build.cfg.make-32bit  build.cfg.make-concurrent  build.cfg.meson  build.cfg.ninja  build.sh  cleanall.sh  dev.sh  flatcc-doc.sh  get-meson.sh  initbuild.sh  meson-debug-test.sh  meson-install.sh  meson-release-test.sh  meson-setup.sh  meson-test.sh  meson-uninstall.sh  monster-doc.example.sh  post-install-check.sh  reflection-doc-example.sh  release.sh  setup.sh  test.sh
src/builder/: CMakeLists.txt  builder.c  emitter.c
src/cli/: CMakeLists.txt  flatcc_cli.c
src/compiler/: CMakeLists.txt  catalog.h  codegen.h  codegen_c.c  codegen_c.h  codegen_c_builder.c  codegen_c_json_parser.c  codegen_c_json_printer.c  codegen_c_reader.c  codegen_c_sort.c  codegen_c_sort.h  codegen_c_sorter.c  codegen_c_verifier.c  codegen_schema.c  codegen_verify.c  coerce.c  coerce.h  fileio.c  fileio.h  flatcc.c  keywords.h  parser.c  parser.h  pstrutil.h  semantics.c  semantics.h  symbols.h
src/compiler/hash_tables/: README.txt  name_table.c  schema_table.c  scope_table.c  symbol_table.c  value_set.c
src/runtime/: CMakeLists.txt  builder.c  emitter.c  json_parser.c  json_printer.c  refmap.c  verifier.c
test/: CMakeLists.txt  README.md  debug.sh  leakcheck-full.sh  leakcheck.sh  meson.build  test.sh
test/benchmark/: README.md  benchall.sh  benchout-osx.txt  benchout-ubuntu.txt
test/benchmark/benchflatc/: benchflatc.cpp  flatbench_generated.h  meson.build  run.sh
test/benchmark/benchflatc/flatbuffers/: flatbuffers.h
test/benchmark/benchflatcc/: benchflatcc.c  meson.build  run.sh
test/benchmark/benchflatccjson/: benchflatccjson.c  meson.build  run.sh
test/benchmark/benchmain/: benchmain.h
test/benchmark/benchraw/: benchraw.c  meson.build  run.sh
test/benchmark/schema/: flatbench.fbs
test/cgen_test/: CMakeLists.txt  cgen_test.c  cgen_test.sh  meson.build
test/cmake/: x86_64-w64-mingw32-toolchain.cmake
test/doublevec_test/: CMakeLists.txt  doublevec_test.c  doublevec_test.fbs
test/emit_test/: CMakeLists.txt  emit_test.c  emit_test.fbs  emit_test.sh  meson.build
test/experimental/: CMakeLists.txt
test/flatc_compat/: .gitattributes  CMakeLists.txt  README.md  flatc_compat.c  flatc_compat.sh  meson.build  monsterdata_test.mon
test/install_test/: CMakeLists.txt
test/json_test/: CMakeLists.txt  flatcc_golden.c  json_test.sh  meson.build  test_basic_parse.c  test_json.c  test_json_parser.c  test_json_printer.c
test/load_test/: CMakeLists.txt  load_test.c  load_test.sh  meson.build
test/monster_test/: CMakeLists.txt  attributes.fbs  include_test2.fbs  meson.build  monster_test.c  monster_test.fbs  pick_test.fbs
test/monster_test_concat/: CMakeLists.txt  README.txt  meson.build  monster_test_concat_explicit.c
test/monster_test_cpp/: CMakeLists.txt  meson.build  monster_test.cpp
test/monster_test_prefix/: CMakeLists.txt  meson.build  monster_test_prefix.c
test/monster_test_solo/: CMakeLists.txt  meson.build  monster_test_solo.c
test/optional_scalars_test/: CMakeLists.txt  optional_scalars_test.c  optional_scalars_test.fbs
test/reflection_test/: CMakeLists.txt  meson.build  reflection_test.c  reflection_test.sh
test/test_cgen/: CMakeLists.txt  test_cgen.sh
test/union_vector_test/: union_vector.fbs
