option('flatcc_portable', type : 'boolean', value : false)
option('flatcc_debug_verify', type : 'boolean', value : false)
option('flatcc_reflection', type : 'boolean', value : true)
option('flatcc_fast_double', type : 'boolean', value : false)
option('flatcc_use_default_library', type : 'boolean', value : false)

# Do not rely no experimental xflatcc options for production,
# these are subject to change without notice.

# dealing with missing support for proper multi output dependencies in
# both ninja build and in flatcc. For now the myschema_reader.h is used
# to drive the depencies.
option('xflatcc_multi_dep_targets', type : 'boolean', value : false)

# Removes all tests, except the important `monster_test`.
# Useful for smaller test suite on new build targets
# and for testing dependency rules without noise.
option('xflatcc_monster_test_only', type : 'boolean', value : false)

# Currently (meson 0.34) it is not possible to generate .bfbs. files
# because there must be a registered compiler that handles .bfbs
# extension, but it is possible to use a custom target that does.
option('xflatcc_reflection_test_custom', type : 'boolean', value : true)

